# altertable-mock

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  docker-publish.yml
scripts/: install_duckdb_libs.sh
src/: layers.rs  main.rs  server.rs  session.rs  utils.rs
src/flight/: mod.rs  schema_extractor.rs  server.rs
src/flight/handlers/: do_action.rs  do_get.rs  do_handshake.rs  do_put.rs  messages.rs  mod.rs
src/flight/layers/: auth.rs  session.rs
src/handlers/: do_action.rs  do_handshake.rs  do_put.rs  get_flight_info.rs  messages.rs
src/lakehouse/: auth.rs  explain.rs  handlers.rs  mod.rs  state.rs  types.rs
src/layers/: auth.rs  correlation.rs
src/product_analytics/: auth.rs  handlers.rs  state.rs  types.rs
