[package]
name = "altertable-mock"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow-flight = { version = "58", features = ["flight-sql"] }
arrow-schema = { version = "58", features = ["canonical_extension_types"] }
arrow-array = { version = "58", features = ["chrono-tz"] }
arrow-ipc = "58"
arrow-json = "58"
tokio = { version = "1.43.1", features = ["full"] }
tonic = "0.14"
axum = { version = "0.8", features = ["multipart"] }
futures = "0.3.31"
async-trait = "0.1.88"
prost = "0.14"
bytes = "1.11.1"
tower = { version = "0.5", features = ["util"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "fmt"] }
uuid = { version = "1.11.0", features = ["v4", "v5", "v7", "serde"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
http = "1.1"
base64 = "0.22.1"
duckdb = { git = "https://github.com/altertable-ai/duckdb-rs", rev = "5d64850c01c48f5c2c4caeb511b2079f4c217d63", features = ["serde_json", "uuid", "chrono", "appender-arrow"] }
tonic-async-interceptor = "0.14.1"
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.41", features = ["serde"] }

[lints.clippy]
equatable_if_let = "warn"
filter_map_next = "warn"
fn_params_excessive_bools = "warn"
if_let_mutex = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
match_wildcard_for_single_variants = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_pass_by_ref_mut = "warn"
needless_pass_by_value = "warn"
option_option = "warn"
redundant_clone = "warn"
ref_option = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_self_not_must_use = "warn"
single_match_else = "warn"
str_to_string = "warn"
suboptimal_flops = "warn"
trivially_copy_pass_by_ref = "warn"
uninlined_format_args = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"
use_self = "warn"
verbose_file_reads = "warn"

[features]
default = ["bundled"]
bundled = ["duckdb/bundled"]
